# amarcord

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile-daemon  Dockerfile-web  README.md  README.org  alembic-p11.ini  alembic.ini  config-new.yml  config.yml  config.yml.sample  create-offline-index-test-scenario.sh  default.nix  entrypoint.sh  environment.yml  flake.nix  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  resources.py  resources.qrc  run-offline-indexing-test-webserver.sh  run-webserver.sh  setup-amici.py  setup.py  shell.nix  test.yaml  xfel_gui.spec
alembic/: env.py
alembic/versions/: abf014796de6_add_event_log.py  cc54b2d4ceae_initial_revision.py
amarcord/: asyncio-daemon.py  clock.py  config.py  daemon.py  database-fuzzer.py  db_cli.py  error_message.py  experiment_simulator.py  filter_expression.py  json.py  json_checker.py  json_schema.py  json_types.py  karabo.py  locker.py  logging_util.py  magic.py  numeric_range.py  pint_util.py  python_schema.py  quart_utils.py  query_parser.py  run_id.py  run_table.py  simple_gui.py  simple_uri.py  train_id.py  uniprot.py  util.py  visualizer.py  webserver.py  xfel_gui.py  xfel_webserver.py  xtal_util.py
amarcord/amici/: analysis.py  karabo_online.py
amarcord/cli/: admin.py  amarcord_cli.py  analysis_daemon.py  cfel_analysis_daemon.py  cheetah_ingester.py  create_geometry_migration.py  crystfel_index.py  crystfel_ingester.py  crystfel_merge.py  daemon.py  database-fuzzer.py  database_fuzzer.py  experiment_simulator.py  generate_openapi_schema.py  geometry_hash.py  gui.py  hostal_webserver.py  indexing_daemon.py  kamzik_daemon.py  kamzik_zmq_async_daemon.py  karabo_bridge_daemon.py  karabo_bridge_deamon.py  karabo_bridge_dumper.py  karabo_bridge_simulator.py  karabo_offline_ingester.py  karabo_online_ingester.py  load_pickle.py  local_job_runner.py  merge_daemon.py  migrate.py  mjpeg_daemon.py  newdb_admin.py  offline_index_test_scenario.py  om_daemon.py  om_simulator.py  p11_filesystem_ingester.py  p11_run_updater.py  slurm_runner.py  upgrade_db_to_latest.py  webserver.py  (+3 more)
amarcord/db/: alembic.py  analysis_result.py  associated_table.py  async_dbcontext.py  asyncdb.py  attributi.py  attributi_map.py  attributo_id.py  attributo_name_and_role.py  attributo_type.py  attributo_value.py  attributo_value_with_source.py  beamtime_id.py  cfel_analysis_result.py  chemical_type.py  comment.py  constants.py  data_set.py  db.py  db_job_status.py  db_merge_result.py  dbattributo.py  dbcontext.py  event_log_level.py  excel_export.py  excel_import.py  experiment_type.py  geometry_type.py  indexing_job.py  indexing_job_status.py  indexing_result.py  ingest_attributi_from_json.py  job_status.py  karabo.py  merge_model.py  merge_negative_handling.py  merge_parameters.py  merge_result.py  mini_chemical.py  mini_sample.py  (+19 more)
amarcord/modules/: attributi_change_dialog.py  cheetah.py  connection_wizard.py  context.py  dbcontext.py  event_log_daemon.py  json.py  json_checker.py  password_check_dialog.py  properties.py  simple_query.py  uicontext.py
amarcord/newdb/: alembic.py  beamline.py  db_analysis_result.py  db_analysis_row.py  db_beamline_diffraction.py  db_crystal.py  db_data_reduction.py  db_dewar_lut.py  db_diffraction.py  db_job.py  db_puck.py  db_reduction_job.py  db_refinement.py  db_sample_data.py  db_tool.py  diffraction_type.py  newdb.py  path.py  (+5 more)
ci/: build-frontend-using-nix.sh  build-frontend.sh  build-web-on-debian.sh  check-generated-elm-code.sh  check-requirements.sh  cypress-integration.sh  cypress.sh  elm-review.sh  elm-test.sh  nix-build-docker-image.sh  pylint-and-mypy.sh  run-tests.sh  upload-webserver.sh
design/: untitled.ui
docs/: Makefile  post-new-file.sh  rest-api.restclient  testfile.txt  update-live-stream.sh
frontend/: .gitignore  .parcelrc  .proxyrc.json  App.css  build-elm-manually.sh  default.nix  download-uglymol-dependencies.sh  elm-srcs.nix  elm.json  flake.nix  import-template.xlsx  package-lock.json  package.json  packages.dhall  run-develop.sh  run-live-dev-env.sh  shell.nix  spago.dhall  uglymol-custom-element.js
hooks/: hook-humanize.py
icons/: resources.qrc
integration/: amici_test.py
purescript-frontend/: .gitignore  .parcelrc  default.nix  generate-schema-code.sh  install-deps.sh  massage-for-production.sh  package-lock.json  package.json  packages.dhall  run-develop.sh  schema.json  shell.nix  spago.dhall
scripts/: generate-database-diagram.sh  generate-elm-from-openapi.sh  ingest-indexamajig  migrate.sh  regenerate-elm-nix.sh  regenerate-requirements.sh  start-gui.sh
snippets/: create_hostal_tables.py  create_password_string.py  crystfel_merge.py  crystfel_stream_feeder.py  elog-parser.py  ingest_hostal_confluence.py  karabo_bridge_dumper.py  karabo_bridge_simulator.py  newdb_multiple_schema.py  slurm_start_test_job.py  start-simulator.py  yamltest.py
tests/: big-test-file.txt  conftest.py  test-file-no-newlines.txt  test-script.sh  test_analysis_tree.py  test_asyncdb.py  test_attributi.py  test_attributi_map.py  test_attributo_conversion.py  test_beamline_metadata.py  test_create_intervals.py  test_crystfel_ambigator.py  test_crystfel_index.py  test_crystfel_indexing_daemon.py  test_daemon.py  test_deglob.py  test_excel_import.py  test_filter_expression.py  test_frame_calculation.py  test_geometry_hash.py  test_grab_mjpeg_frame.py  test_indexing_daemon.py  test_int_datetime_conversions.py  test_json_checker.py  test_json_schema.py  test_karabo_bridge.py  test_local_job_runner.py  test_orm_utils.py  test_pint_util.py  test_qt_datetime.py  test_query_parser.py  test_range_parser.py  test_simple_uri.py  test_slurm_rest_job_controller.py  test_sort_natural.py  test_util.py  test_webserver.py  test_workload_manager_factory.py
tutorial/: README.org  simple-analysis-db.py
workflow-data/: dummy-amarcord-refinement-output.json  local-dummy-refinement.sh  local-dummy-workflow.sh  parse_xia2_result.py  test-tool-input.json
xfel-configs/: photolyase-2770.yaml
(+552 files in other folders)
